<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/activity_modify_word__button__translate"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/activity_modify_word__button__translate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/activity_modify_word__edit_text__word_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_add_word__text_view__new_word_hint"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/activity_modify_word__spinner__new_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:padding="0dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/activity_modify_word__edit_text__word_translation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_add_word__translation_hint"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/activity_modify_word__spinner__translation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:padding="0dp" />

            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/activity_modify_word__button__translate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/selector__accent_alternative_round"
            android:contentDescription="@string/stub"
            android:padding="15dp"
            android:src="@drawable/ic__translate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ButtonStyle" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="15dp">

        <TextView
            android:id="@+id/activity_add_word__text_view__radio_block_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/activity_modify_word__radio__block_name" />

        <RadioButton
            android:id="@+id/activity_modify_word__radio__all_sides"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/activity_modify_word__radio__all_sides" />

        <RadioButton
            android:id="@+id/activity_modify_word__radio__study_to_native"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_modify_word__radio__study_to_native" />

        <RadioButton
            android:id="@+id/activity_modify_word__radio__native_to_study"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_modify_word__radio__native_to_study" />
    </RadioGroup>

    <Button
        android:id="@+id/activity_modify_word__button__update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:background="@drawable/plate__accent"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:text="@string/activity_modify_word__button__update" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/activity_modify_word__button__delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector__accent"
            android:clickable="true"
            android:contentDescription="@string/stub"
            android:focusable="true"
            android:padding="10dp"
            android:src="@drawable/ic__delete" />

        <ImageButton
            android:id="@+id/activity_modify_word__button__archive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector__accent"
            android:clickable="true"
            android:contentDescription="@string/stub"
            android:focusable="true"
            android:padding="10dp"
            android:src="@drawable/ic__archive" />

        <ImageButton
            android:id="@+id/activity_modify_word__button__unarchive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector__accent"
            android:contentDescription="@string/stub"
            android:padding="10dp"
            android:src="@drawable/ic__unarchive"
            android:visibility="gone" />

        <Button
            android:id="@+id/activity_modify_word__button__remove_hard_tag"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/selector__accent"
            android:padding="10dp"
            android:text="@string/activity_modify_word__button__uncheck_as_hard"
            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>